ARROW-12150: [Python] Correctly infer type of mixed-precision Decimals